tests/invalid_syntax/test_invalid_unary.aphi
/*
Demonstrates: Invalid use of unary operators
*/

bool b;

procedure main {
    b = !!true;
}